@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin smtp n 1.3.4]
+[manpage_begin smtp n 1.3.5]
 [copyright {1999-2000 Marshall T. Rose}]
 [moddesc   {smtp client}]
 [titledesc {Client-side tcl implementation of the smtp protocol}]
 [require Tcl]
-[require mime [opt 1.3.4]]
-[require smtp [opt 1.3.4]]
+[require mime [opt 1.3.5]]
+[require smtp [opt 1.3.5]]
 [description]
 [para]
 
@@ -56,6 +56,11 @@ commas.
 
 A list of keywords and their values (may occur zero or more times).
 
+[lst_item [option -usetls]]
+
+This package supports the RFC 3207 TLS extension by default provided the 
+tls package is available. You can turn this off with this boolean option.
+
 [list_end]
 [nl]
 
@@ -100,5 +105,6 @@ send_simple_message someone@somewhere.com localhost \\
 }]
 
 [see_also mime pop3 ftp http]
-[keywords mail mail email smtp mime {rfc 821} {rfc 822} internet net]
+[keywords mail mail email smtp mime tls \
+     {rfc 821} {rfc 822} {rfc 3207} internet net]
 [manpage_end]
